[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openthought"
version = "2.0.0"
description = "AI-Powered Chain-of-Thought Tool for Deep Reflection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Agent_Li", email = "jh_li07@outlook.com" }
]
keywords = [
    "thinking",
    "reflection",
    "socratic",
    "chain-of-thought",
    "ai-tool",
    "llm",
    "conversation",
    "mindfulness",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

# Optional dependencies
[project.optional-dependencies]
all = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# Entry points
[project.scripts]
openthought = "openthought.cli:main"

# URLs
[project.urls]
Homepage = "https://github.com/jhli07/OpenThought"
Repository = "https://github.com/jhli07/OpenThought"
Issues = "https://github.com/jhli07/OpenThought/issues"
Changelog = "https://github.com/jhli07/OpenThought/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["openthought*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
